# python-architecture

./: model.py  pyproject.toml  test_model.py
