[tool.poetry]
name = "cosmicpython-code"
version = "0.1.0"
description = ""
authors = ["Matthew Hogan <matthewghogan@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "*"
flask = "*"
psycopg2-binary = "*"
redis = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-icdiff = "*"
mypy = "*"
pylint = "*"
requests = "*"
tenacity = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
